added command line tips